# lightweight_trading_bot_3

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
backend/: .env.example  Cargo.toml
backend/src/: config.rs  dashboard.rs  hermes_reporter.rs  live.rs  llm.rs  main.rs  market_recorder.rs  polymarket.rs  rtds.rs  snipe.rs  state.rs  strategy.rs
backend/src/whale/: config.rs  parser.rs  runtime.rs  signal.rs  state.rs  tracker.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  formatting.ts  main.tsx  market-ws.ts  market.ts  numbers.ts  reference.ts  selectors.ts  styles.css  types.ts
frontend/src/components/: Metric.tsx  SymbolPanel.tsx
frontend/src/components/atoms/: Metric.tsx
frontend/src/components/organisms/: ActivityFeed.tsx  Header.tsx  LlmReviewPanel.tsx  ManualOrderSidebar.tsx  SettingsModal.tsx  SymbolPanel.tsx
frontend/src/hooks/: useClock.ts  useDashboardStatus.ts  useMarketQuotes.ts  useReferencePrices.ts
scripts/: backtest_recovery_replay.py  live_clob_v2_order.py  recent_trade_diagnostics.py  replay_market_recorder.py  test.rs
src/: config.rs  dashboard.rs  execution.rs  live.rs  main.rs  polymarket.rs  snipe.rs  state.rs  strategy.rs
src/whale/: book.rs  mod.rs  model.rs  util.rs
